# AsistenteBi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  manual_usuario.md  pyproject.toml  requirements.txt
Python/: database.py  main.py  models.py
assets/: index-CUXwAolk.css
frontend-bi/: Dockerfile  README.md  eslint.config.js  index.html  nohup.out  package-lock.json  package.json  vite.config.js
frontend-bi/src/: App.css  App.jsx  index.css  main.jsx
nginx/: default.conf
src/app/: __init__.py  main.py  models.py  seed.py
src/app/api/: __init__.py
src/app/api/routes/: __init__.py  ask.py  health.py  root.py
src/app/core/: __init__.py  database.py  settings.py
src/asistente_bi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_health.py
