[project]
name = "asistente-bi"
version = "0.1.0"
description = "Asistente de BI con Exploración de Datos Interactiva GenBI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-google-genai",
    "langchain-community",
    "google-generativeai",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
